[package]
name = "waylock"
version = "0.1.0"
edition = "2024"

[dependencies]
accounts-service = { version = "0.1.1", optional = true }
clap = { version = "4.5.41", features = ["derive"] }
gtk = { version = "0.10.2", package = "gtk4", features = [ "v4_18", "v4_18" ] }
gtk_session_lock = { version = "0.3.0", features = [ "v1_1", "v1_2" ], package = "gtk4-session-lock" }
infer = { version = "0.19.0", optional = true }
libc = "0.2.177"
mpris = { version = "2.0.1", optional = true }
nonstick = "0.1.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.8"
video = { version = "0.1.0", path = "video", optional = true }
whoami = "1.6.1"
xdg = "3.0.0"

[features]
default = ["userinfo", "video"]
playerctl = ["mpris"]
userinfo = ["accounts-service"]
video = ["infer", "dep:video"]
