[package]
name = "waylock"
version = "0.1.0"
edition = "2024"

[dependencies]
accounts-service = { version = "0.1.1", optional = true }
clap = { version = "4.5.41", features = ["derive"] }
gtk = { version = "0.10.2", package = "gtk4", features = [ "v4_18", "v4_18" ] }
gtk_session_lock = { version = "0.3.0", features = [ "v1_1", "v1_2" ], package = "gtk4-session-lock" }
infer = { version = "0.19.0", optional = true }
libc = "0.2.177"
mpris = { version = "2.0.1", optional = true }
nonstick = "0.1.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
toml = "0.9.8"
xdg = "3.0.0"
wayland-client = { version = "0.31.11", optional = true }
wayland-protocols = { version = "0.32.9", features = ["client", "staging"], optional = true }
xcap = "0.7.1"
grim-rs = { version = "0.1.3", optional = true, default-features = false, features = [ "png" ] }
libblur = { version = "0.21.0", optional = true }
wgpu = { version = "27.0.1", optional = true, default-features = false, features = ["gles", "std", "vulkan", "wgsl"] }
pollster = { version = "0.4.0", optional = true }
tracing-subscriber = { version = "0.3.22", optional = true }
blur = { version = "0.1.0", path = "blur", optional = true }
image = { version = "0.25.9", optional = true }
bytemuck = "1.24.0"
futures = { version = "0.3.31", optional = true }

[features]
default = ["userinfo", "video", "screenshot", "gpu", "show-submit-button"]
playerctl = ["mpris"]
userinfo = ["accounts-service"]
video = ["infer"]
wayland-client = ["dep:wayland-client"]
idlenotifier = ["wayland-client"]
show-numlock = []
show-submit-button = []
screenshot = ["grim-rs", "libblur"]
gpu = ["blur", "image", "futures", "wgpu"]
